--- a/ubuntu-app-startup.desktop
+++ b/ubuntu-app-startup.desktop
@@ -7,3 +7,5 @@ Terminal=false
 X-Ubuntu-Touch=true
 X-Ubuntu-StageHint=SideStage
 X-Ubuntu-Single-Instance=true
+X-Ubuntu-Splash-Show-Header=true
+X-Ubuntu-Splash-Title=Applications
